--- a/Assignment-1.Rmd
+++ b/Assignment-1.Rmd
@@ -2,6 +2,8 @@
 title: 'Assignment 1: Grandparents on duty'
 author: "by Cristina Davila Gonzalez"
 date: "9/4/2020"
+output: html_document
+
 ---
 
 *On this year's Back to School season, most of public schools worldwide have decided to go remote. Coming from a current context of diaspora and mass migration of young/adult professionals,  where sometimes elders are left in charge of their grandchildren, I decided to take a look at similar family scenarios in the U.S. where grandparents are a key factor in making remote-learning feasible for their underage relatives.*
@@ -9,6 +11,7 @@ date: "9/4/2020"
 ```{r, message = FALSE}
 library(tidycensus)
 library(tidyverse)
+library(dplyr)
 ```
 
 # Variables Used
@@ -51,7 +54,7 @@ My person-level dataset has 25,993 rows, which mean my analysis will include 25,
 9. **Limited English-speaking household** (LNGI) (categorical)
 
 ```{r load household-level data, message=FALSE, results = 'hide',}
-hh_data <- get_pums(variables = c("R18", 
+hh_data <- get_pums(variables = c("R18",
                         "ACCESS",
                         "NPP", 
                         "LNGI"),
@@ -76,44 +79,3 @@ For both datasets, I'll save them as a CSV files so I can use them later.
 write_csv(person_data, "u18people.csv")
 write_csv(hh_data, "households.csv")
 ```
-
---------------------------
-
-# Bonus: Case Study - Cook County
-
-In the course's general project, I'm considering a potential case study using area-level data. I wanted to add a case study where I get incorporate specific variables, that analyzed on a county scale, could provide valuable insight on the research question. I plan to handle these variables independently from the person and household-level, as area-level variables are based on the ACS 5-year data.
-
-##  Area-Level Data Analysis 
-
-10. **Total Population** (continuous): total_pop
-11. **Grandchildren under 18 living with a grandparent** (categorical): U18_wgp
-12. **Grandparents of over 60 responsible for grandchildren without the presence of their parents** (categorical): G60_wop
-
-```{r load area-level data, message=FALSE, results='hide'}
-pop_vars <- c(total_pop = "B02001_001",
-              U18_wgp = "B10001_001",
-              G60_wop = "B10051_005")
-
-countyGrandparents60plus_wUnder18_CookIL <- get_acs(geography= "county", 
-              variables = pop_vars, 
-              output = "wide", 
-              state = "IL",
-              county = "Cook",
-              year = 2018, 
-              survey = "acs5")
-
-```
-
-
-```{r}
-countyGrandparents60plus_wUnder18_CookIL
-  
-``` 
-
-For this additional dataset, I'll also save it so I can use it later.
-
-```{r}
-write_csv(countyGrandparents60plus_wUnder18_CookIL, "cookcountyil.csv")
-```
-
-
